change some alsoe schane