@@ -1,10 +1,8 @@
 package com.example.e_commerce_system.service;
 
-import com.example.e_commerce_system.entity.OrderStatus;
 import com.stripe.Stripe;
 import com.stripe.model.PaymentIntent;
 import com.stripe.param.PaymentIntentCreateParams;
-import com.stripe.param.PaymentIntentRetrieveParams;
 import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -14,22 +12,25 @@ import java.math.BigDecimal;
 @Service
 public class PaymentService {
 
-    @Value("${stripe.secret-key}")   // Must be set as environment variable: STRIPE_SECRET_KEY
+    @Value("${stripe.secret-key}")
     private String stripeSecretKey;
 
     @PostConstruct
     public void init() {
-        if (stripeSecretKey == null || stripeSecretKey.isBlank()) {
-            System.err.println("WARNING: Stripe secret key is not configured via environment variable!");
+        if (stripeSecretKey == null || stripeSecretKey.trim().isEmpty() || 
+            stripeSecretKey.contains("your_stripe_test_key_here")) {
+            throw new IllegalStateException("Stripe secret key is not configured properly. " +
+                    "Please set the STRIPE_SECRET_KEY environment variable.");
         }
-        Stripe.apiKey = stripeSecretKey;
+        Stripe.apiKey = stripeSecretKey.trim();
+        System.out.println("Stripe API key initialized successfully.");
     }
 
     public String createPaymentIntent(BigDecimal amount) {
         try {
             long amountInCents = amount.multiply(BigDecimal.valueOf(100)).longValue();
             if (amountInCents < 50) {
-                throw new RuntimeException("Amount too small. Minimum $0.50");
+                throw new IllegalArgumentException("Amount too small. Minimum $0.50");
             }
 
             PaymentIntentCreateParams params = PaymentIntentCreateParams.builder()
@@ -44,23 +45,22 @@ public class PaymentService {
             PaymentIntent paymentIntent = PaymentIntent.create(params);
             return paymentIntent.getId();
         } catch (Exception e) {
-            throw new RuntimeException("Payment creation failed: " + e.getMessage(), e);
+            throw new RuntimeException("Failed to create Stripe PaymentIntent: " + e.getMessage(), e);
         }
     }
 
-    // Improved confirmation with actual Stripe verification
+    // Called after frontend confirms payment
     public void confirmPayment(String paymentIntentId) {
         try {
             PaymentIntent intent = PaymentIntent.retrieve(paymentIntentId);
             if ("succeeded".equals(intent.getStatus())) {
-                // TODO: Update order status to PAID (inject OrderRepository if needed)
-                System.out.println("Payment confirmed and succeeded for: " + paymentIntentId);
-                // orderRepository.findByPaymentIntentId(...).ifPresent(... set PAID);
+                System.out.println("✅ Payment confirmed successfully for: " + paymentIntentId);
+                // TODO: Update order status to PAID here (inject OrderRepository if needed)
             } else {
-                System.out.println("Payment status: " + intent.getStatus());
+                throw new RuntimeException("Payment not succeeded. Status: " + intent.getStatus());
             }
         } catch (Exception e) {
-            System.err.println("Failed to verify payment: " + e.getMessage());
+            throw new RuntimeException("Failed to verify payment: " + e.getMessage(), e);
         }
     }
 }
